<resources>
    <string name="app_name">KFC取餐柜</string>
    <string name="home_welcome">欢迎进行自助取餐</string>
    <string name="take_meals_flow">取餐流程</string>
    <string name="scan_code_start">屏幕下方扫码取餐</string>
    <string name="home_tips">Tips：取餐过程中如遇任何问题，可随时联系餐厅工作人员</string>

    <string name="qrcodr_title">扫码开柜</string>
    <string name="qrcodr_subhead">请将手机二维码/收银条二维码置于屏幕右侧，进行扫码取餐……</string>
    <string name="qrcodr_back">返回首页</string>
    <string name="con_meals">继续取餐</string>
    <string name="re_qrcodr">重新扫码</string>

    <string name="noProducts_content1">取餐柜里暂时没有可取餐品哦</string>
    <string name="noProducts_content2">您可先进行自助点餐</string>

    <string name="noProducts_content3">稍等一会儿，您的餐品还在制作哦</string>
    <string name="noProducts_content4">您可以通过叫号屏查看备餐情况</string>

    <string name="MechanicalFailures_1">机器/系统故障</string>
    <string name="MechanicalFailures_2">请及时与餐厅工作人员</string>

    <string name="takeOut_title">取出餐品</string>
    <string name="take_out_context">已开启，请你及时取出餐品并关闭柜门哦，谢谢</string>

    <string name="qrcord_Failure_title">扫码失败</string>
    <string name="qrcord_Failure_content1">请调整您的手机或收银条再次扫码......</string>
    <string name="qrcord_Failure_content2">您可再次调手机、收银条进行扫码或者联系餐厅工作人员......</string>

    <string name="completed_content">取餐码失效，您已经取餐了哦</string>

    <string name="no_self_help_content1">未能识别当前二维码，请使用自助取餐柜二维码进行取餐</string>
    <string name="no_self_help_content2">取餐码请在订单详情页或收银条上查找</string>

    <string name="open_cell_fail">%1$s号格子打开失败，请联系管理员</string>
</resources>
