<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        style="@style/kfc_title_textview"
        android:text="@string/completed_content" />

    <Button
        android:id="@+id/back_button"
        style="@style/kfc_red_button"
        android:layout_below="@id/imageview"
        android:text="@string/qrcodr_back" />

    <TextView
        style="@style/kfc_content_gray_textview"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/home_tips" />

</RelativeLayout>